--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#876] New script http-vuln-cve2017-5689 detects a privilege escalation 
+  vulnerability (INTEL-SA-00075) in Intel Active Management Technology (AMT)
+  capable systems. [Andrew Orr]
+
 o Extended Memcached service probe and added match for Apache ZooKeeper. 
   [Paulino Calderon]
 
